// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot for code login only 1`] = `
<div>
  <div
    class=" mt--0 mb--0 sign-in-banner"
    data-qa-sel="sign-in-banner"
    id="loginBanner"
  >
    <div
      class="container"
    >
      <div
        class="LoginBanner"
        role="form"
      >
        <div
          class="input"
        >
          <div
            class="input limitWidth input__input"
          >
            <label
              class="input__label"
              for="orgCode-undefined"
            >
              Enter your organisation code
            </label>
            <input
              class="input__input"
              data-qa-sel="OrganisationCodeLogin"
              id="orgCode-undefined"
              name="orgCode-undefined"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should match snapshot for idam login and in comments panel 1`] = `
<div>
  <div
    class=" mt--0 mb--0 sign-in-banner"
    data-qa-sel="sign-in-banner"
    id="loginBanner"
  >
    <div
      class="container"
    >
      <div
        class="LoginBanner"
        role="form"
      >
        <h3>
          Some title
        </h3>
        <p
          class=""
        >
          <a
            href="/signin-url"
            title="Sign in to your NICE account"
          >
            Sign in to your NICE account
          </a>
           
          to comment on this consultation
          .
           
        </p>
        <p
          class=""
        >
          <a
            href="/register-url"
            title="Register for a NICE account"
          >
            Register
          </a>
           
          for a NICE account if you don't already have one.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`should match snapshot for idam login and not in comments panel 1`] = `
<div>
  <div
    class="panel panel-white mt--0 mb--0 sign-in-banner"
    data-qa-sel="sign-in-banner"
    id="loginBanner"
  >
    <div
      class="container"
    >
      <div
        class="LoginBanner"
        role="form"
      >
        <p
          class="display--inline"
        >
          <a
            href="/signin-url"
            title="Sign in to your NICE account"
          >
            Sign in to your NICE account
          </a>
           
          signin text
          .
           
        </p>
        <p>
          <a
            class="btn"
            href="/signin-url"
            title="Sign in to your NICE account"
          >
            Sign in
          </a>
        </p>
        <p
          class="display--inline"
        >
          <a
            href="/register-url"
            title="Register for a NICE account"
          >
            Register
          </a>
           
          for a NICE account if you don't already have one.
        </p>
      </div>
    </div>
  </div>
</div>
`;
